# qwtplot3d

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  dsp.bat  lingua_de.ts  qwtplot3d.pro
.github/workflows/: main.yml
Debug/: Makefile
Debug/lib/: libqwtplot3d.so.0.2  libqwtplot3d.so.0.2.6
Debug/tmp/: moc_qwt3d_plot.cpp
Release/: Makefile
Release/lib/: libqwtplot3d.so.0.2.6
Release/tmp/: moc_qwt3d_surfaceplot.cpp
doc/: Doxyfile.doxygen  footer.html
doc/web/navigation/: doxygen.css  menu.css
examples/: CMakeLists.txt  common.pro  dsp.bat  examples.pro  examples.sln
examples/autoswitch/: CMakeLists.txt  autoswitch.cpp  autoswitch.h  autoswitch.pro
examples/axes/: CMakeLists.txt  axes.h  axes.pro  axesmainwindow.cpp  axesmainwindow.h  axesmainwindowbase.ui  main.cpp
examples/axes/src/: axes.h  axesmainwindow.cpp  axesmainwindow.h  axesmainwindowbase.ui  axesmainwindowbase4.ui  main.cpp
examples/enrichments/: CMakeLists.txt  enrichmentmainwindow.cpp  enrichmentmainwindow.h  enrichmentmainwindowbase.ui  enrichments.cpp  enrichments.h  enrichments.pro  main.cpp
examples/enrichments/src/: enrichmentmainwindow.cpp  enrichmentmainwindow.h  enrichmentmainwindowbase.ui  enrichmentmainwindowbase4.ui  enrichments.cpp  enrichments.h  main.cpp
examples/mesh2/: CMakeLists.txt  colormapreader.cpp  colormapreader.h  designerworkaround.cpp  designerworkaround.h  femreader.h  functions.h  images.qrc  lightingdlg.cpp  lightingdlg.h  lightingdlgbase.ui  lightingdlgbaseimpl.cpp  lightingdlgbaseimpl.h  main.cpp  mesh.cpp  mesh2.pro  mesh2mainwindow.cpp  mesh2mainwindow.h  mesh2mainwindowbase.ui
examples/mesh2/src/: colormapreader.cpp  colormapreader.h  designerworkaround.cpp  designerworkaround.h  femreader.h  functions.h  lightingdlg.cpp  lightingdlg.h  lightingdlgbase.ui  lightingdlgbase4.ui  lightingdlgbaseimpl.cpp  lightingdlgbaseimpl.h  main.cpp  mesh.cpp  mesh2mainwindow.cpp  mesh2mainwindow.h  mesh2mainwindowbase.ui  mesh2mainwindowbase4.ui  thesis.tex
examples/simpleplot/: CMakeLists.txt  simpleplot.cpp  simpleplot.pro
include/: qwt3d_autoptr.h  qwt3d_autoscaler.h  qwt3d_axis.h  qwt3d_color.h  qwt3d_colorlegend.h  qwt3d_coordsys.h  qwt3d_drawable.h  qwt3d_enrichment.h  qwt3d_enrichment_std.h  qwt3d_function.h  qwt3d_global.h  qwt3d_graphplot.h  qwt3d_gridmapping.h  qwt3d_helper.h  qwt3d_io.h  qwt3d_io_gl2ps.h  qwt3d_io_reader.h  qwt3d_label.h  qwt3d_mapping.h  qwt3d_multiplot.h  qwt3d_openglhelper.h  qwt3d_parametricsurface.h  qwt3d_plot.h  qwt3d_portability.h  qwt3d_scale.h  qwt3d_surfaceplot.h  qwt3d_types.h  qwt3d_version.h.in  qwt3d_volumeplot.h
scripts/: fixvc7.py  makedistro.py  makedocu.py  qwtplot3d.supp
src/: qwt3d_autoscaler.cpp  qwt3d_axis.cpp  qwt3d_color.cpp  qwt3d_colorlegend.cpp  qwt3d_coordsys.cpp  qwt3d_dataviews.cpp  qwt3d_drawable.cpp  qwt3d_enrichment_std.cpp  qwt3d_function.cpp  qwt3d_gridmapping.cpp  qwt3d_gridplot.cpp  qwt3d_io.cpp  qwt3d_io_gl2ps.cpp  qwt3d_io_reader.cpp  qwt3d_label.cpp  qwt3d_lighting.cpp  qwt3d_meshplot.cpp  qwt3d_mousekeyboard.cpp  qwt3d_movements.cpp  qwt3d_parametricsurface.cpp  qwt3d_plot.cpp  qwt3d_scale.cpp  qwt3d_surfaceplot.cpp  qwt3d_types.cpp
